--- a/kindle-events-parser/Cargo.toml
+++ b/kindle-events-parser/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "kindle-events-screen"
 version = "0.1.0"
-authors = ["david <davidventura27@gmail.com>"]
+authors = ["david"]
 edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
