--- a/kindle-events-parser/Makefile
+++ b/kindle-events-parser/Makefile
@@ -5,7 +5,9 @@ all: build copy
 
 clean:
 	rm -f target/armv7-unknown-linux-musleabihf/release/kindle-events-screen
-target/armv7-unknown-linux-musleabihf/release/kindle-events-screen:
+
+target/armv7-unknown-linux-musleabihf/release/kindle-events-screen: src/*rs
+	SYSROOT_LIB_DIR=~/git/Amazon-Kindle-Cross-Toolchain/arm-kindle-linux-gnueabi/arm-kindle-linux-gnueabi/sysroot/lib/ \
 	cargo build --target armv7-unknown-linux-musleabihf --release
 
 build: target/armv7-unknown-linux-musleabihf/release/kindle-events-screen
